@@ -213,6 +213,11 @@ res_pjsip
   an interval, in seconds, at which we will send RTP comfort noise packets to
   the endpoint. This functions identically to chan_sip's "rtpkeepalive" option.
 
+* New 'rtp_timeout' and 'rtp_timeout_hold' endpoint options have been added.
+  These options specify the amount of time, in seconds, that Asterisk will wait
+  before terminating the call due to lack of received RTP. These are identical
+  to chan_sip's rtptimeout and rtpholdtimeout options.
+
 ------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 13.3.0 to Asterisk 13.4.0 ------------
 ------------------------------------------------------------------------------
